# astc-encoder

Source/: CMakeLists.txt  Makefile  astc_lib.cpp  astc_lib.h
